// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<Button /> accepts a style prop 1`] = `
.c0 {
  height: 36px;
  min-width: 90px;
  padding: 0 12px;
  border: 0;
  outline: none;
  box-shadow: 0 1px 3px rgba(0,0,0,0.12),0 1px 2px rgba(0,0,0,0.24);
  background: #fff;
  color: #000;
  font-size: 0.875em;
  text-transform: uppercase;
  cursor: pointer;
}

.c0:hover {
  -webkit-transition: color .3s ease;
  transition: color .3s ease;
  background: #f8f8f8;
  color: #3c3c5b;
}

<button
  className="c0"
  disabled={undefined}
  onClick={[Function]}
  style={
    Object {
      "color": "blue",
    }
  }
  type={undefined}
>
  Submit
</button>
`;

exports[`<Button /> snapshots renders danger 1`] = `
.c0 {
  height: 36px;
  min-width: 90px;
  padding: 0 12px;
  border: 0;
  outline: none;
  box-shadow: 0 1px 3px rgba(0,0,0,0.12),0 1px 2px rgba(0,0,0,0.24);
  background: #c7254e;
  color: #fff;
  font-size: 0.875em;
  text-transform: uppercase;
  cursor: pointer;
}

.c0:hover {
  -webkit-transition: color .3s ease;
  transition: color .3s ease;
  background: #b12146;
  color: #fff;
}

<button
  className="c0"
  disabled={undefined}
  onClick={[Function]}
  style={undefined}
  type={undefined}
>
  Danger
</button>
`;

exports[`<Button /> snapshots renders default 1`] = `
.c0 {
  height: 36px;
  min-width: 90px;
  padding: 0 12px;
  border: 0;
  outline: none;
  box-shadow: 0 1px 3px rgba(0,0,0,0.12),0 1px 2px rgba(0,0,0,0.24);
  background: #fff;
  color: #000;
  font-size: 0.875em;
  text-transform: uppercase;
  cursor: pointer;
}

.c0:hover {
  -webkit-transition: color .3s ease;
  transition: color .3s ease;
  background: #f8f8f8;
  color: #3c3c5b;
}

<button
  className="c0"
  disabled={undefined}
  onClick={[Function]}
  style={undefined}
  type={undefined}
>
  Submit
</button>
`;

exports[`<Button /> snapshots renders disabled 1`] = `
.c0 {
  height: 36px;
  min-width: 90px;
  padding: 0 12px;
  border: 0;
  outline: none;
  box-shadow: 0 1px 3px rgba(0,0,0,0.12),0 1px 2px rgba(0,0,0,0.24);
  background: #f8f8f8;
  color: #aaaaaa;
  font-size: 0.875em;
  text-transform: uppercase;
  cursor: not-allowed;
}

.c0:hover {
  -webkit-transition: color .3s ease;
  transition: color .3s ease;
  background: #f8f8f8;
  color: #aaaaaa;
}

<button
  className="c0"
  disabled={true}
  onClick={[Function]}
  style={undefined}
  type={undefined}
>
  Disabled
</button>
`;

exports[`<Button /> snapshots renders primary 1`] = `
.c0 {
  height: 36px;
  min-width: 90px;
  padding: 0 12px;
  border: 0;
  outline: none;
  box-shadow: 0 1px 3px rgba(0,0,0,0.12),0 1px 2px rgba(0,0,0,0.24);
  background: #037aa9;
  color: #fff;
  font-size: 0.875em;
  text-transform: uppercase;
  cursor: pointer;
}

.c0:hover {
  -webkit-transition: color .3s ease;
  transition: color .3s ease;
  background: #036890;
  color: #fff;
}

<button
  className="c0"
  disabled={undefined}
  onClick={[Function]}
  style={undefined}
  type={undefined}
>
  Primary
</button>
`;

exports[`<Button /> snapshots renders selected 1`] = `
.c0 {
  height: 36px;
  min-width: 90px;
  padding: 0 12px;
  border: 0;
  outline: none;
  box-shadow: 0px 0px 2px 2px #8383ac;
  background: #fff;
  color: #000;
  font-size: 0.875em;
  text-transform: uppercase;
  cursor: pointer;
}

.c0:hover {
  -webkit-transition: color .3s ease;
  transition: color .3s ease;
  background: #f8f8f8;
  color: #3c3c5b;
}

<button
  className="c0"
  disabled={undefined}
  onClick={[Function]}
  style={undefined}
  type={undefined}
>
  Selected
</button>
`;
